# CoursePlatformAPI

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  auth.py  course.py  user.py
app/core/: config.py  errors.py  exceptions.py  logger.py  redis_setup.py  role_checker.py  tokens.py
app/crud/: base.py  otp.py  user.py
app/database/: main.py
app/dependencies/: services.py
app/models/: __init__.py  auth_user.py  course.py  enrollment.py  instructor.py  notifications.py  payment.py  profile.py  student.py  student_course.py
app/repositories/: __init__.py  base.py  course.py  otp.py  user.py
app/routers/: __init__.py  auth.py
app/schemas/: __init__.py  base.py  course.py  otp.py  user.py
app/services/: __init__.py  auth_user_service.py  course_service.py  otp_service.py  rate_limiting_service.py
app/utils/: email_validation.py  generate_cache_key.py  generate_otp.py  hash_password.py  send_email.py  validate_password.py
